force-app/main/default/objects/vlocity_cmt__ESMQuoteCloneBatchJobIds__c/vlocity_cmt__ESMQuoteCloneBatchJobIds__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ESMQuoteCloneBatchJobIds</label>
</CustomObject>