force-app/main/default/objects/vlocity_cmt__ESMQuoteCloneBatchJobIds__c/fields/vlocity_cmt__allRelatedJobsTriggered__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__allRelatedJobsTriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>allRelatedJobsTriggered</label>
    <type>Checkbox</type>
</CustomField>