force-app/main/default/objects/vlocity_cmt__ESMQuoteCloneBatchJobIds__c/fields/vlocity_cmt__cloneType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__cloneType__c</fullName>
    <label>cloneType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>