force-app/main/default/objects/vlocity_cmt__ESMQuoteCloneBatchJobIds__c/fields/vlocity_cmt__JobIdList__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__JobIdList__c</fullName>
    <label>JobIdList</label>
    <type>TextArea</type>
</CustomField>