force-app/main/default/objects/vlocity_cmt__ESMQuoteCloneBatchJobIds__c/fields/vlocity_cmt__sourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__sourceRecordId__c</fullName>
    <label>sourceRecordId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>